New: MachineLearnig using Linear Regression

--- a/LinearRegression.ipynb
+++ b/LinearRegression.ipynb
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3732cae3",
+   "id": "42a110eb",
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +270,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ad5e588f",
+   "id": "59f00bba",
    "metadata": {},
    "outputs": [
     {
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "836811c6",
+   "id": "6e3f21ef",
    "metadata": {},
    "source": [
     "## Split into training and testing data"
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6e903bde",
+   "id": "01e95a7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "450a8bdf",
+   "id": "ad2cbcf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "cb484264",
+   "id": "905cd7a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "978f228a",
+   "id": "1d7cc091",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1c0b600",
+   "id": "b4565a1e",
    "metadata": {},
    "source": [
     "## Training the model"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "8624b36a",
+   "id": "459f2920",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +361,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "d90a4433",
+   "id": "0d5293e8",
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d71e859",
+   "id": "af124cc4",
    "metadata": {},
    "source": [
     "## Predicting data using the trained model"
@@ -394,8 +394,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 48,
+   "id": "008f6db2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3718947.89349303],\n",
+       "       [4380816.58984932],\n",
+       "       [5042685.28620562]])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict([[2025], [2030], [2035]])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "d3ee5132",
+   "id": "00333d7b",
    "metadata": {},
    "outputs": [],
    "source": []
